<resources>
    <string name="app_name">Yóu</string>
    <string name="chatNamePlaceHolder">Chat Name</string>
    <string name="error_msg">Error: No puede tener un nombre vacio</string>
    <string name="join_error1">Error: No exite un ChatRoom con ese ID</string>
    <string name="crear_sala_de_chat">Crear Sala de Chat</string>
    <string name="crear">Crear</string>
    <string name="web_google_api_token">260878537518-c6vtqv2c9mp9v7f15g146tu5in71qa2l.apps.googleusercontent.com</string>
    <string name="register">Register</string>
    <string name="sign_in_mail">Sign in with E-mail</string>
    <string name="register_user">Register User</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="nickname">Nickname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingresar_nickname">Ingresar Nickname</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="acerda_de_nostros">Acercchra de Nostros</string>
    <string name="compartir_con_amigos">Compartir con Amigos</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="descripcionGrupo">Somo un grupo de estudiantes de Ing. en Sistemas y Gerencia Informatica de la Universidad Americana UAM</string>
    <string name="integrantes">Integrantes :</string>
    <string name="roberto_oscar_s_nchez_saravia">Roberto Oscar Sánchez Saravia</string>
    <string name="saramelia_balladares">Saramelia Balladares López</string>
    <string name="gheytner_echegoyen">Gheytner Ethyamil Echegoyen Gomez</string>
    <string name="luigi_potoy">Luigi Alexander Potoy Espinoza</string>

</resources>
